chore: update AGENTS.md with configuration info